--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "devanych/yii2-cart",
+    "name": "shahjadin/yii2-cart",
     "description": "Shopping cart for Yii2",
     "keywords": ["yii2-cart", "yii2-shopping-cart", "yii2-extension", "yii2"],
     "type": "yii2-extension",
